examples/bad/args.ypl
sum(a): {
    return a;
}

main(): {
    out(sum());
}
